changes for validator -articles to divs -img alts start of 2 other pages

--- a/index.html
+++ b/index.html
@@ -23,94 +23,94 @@
 
 
 <main id="content">
-   <div class="justFlex"><h2 class="vertical-left">FEATURED CATEGORIES</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
-<section class="featured gridLine">
+   <div class="justFlex"><h2 class="vertical-left">FEATURED CATEGORIES</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="goRight"></span></div>
+<div class="featured gridLine">
     
     <div class="line1">
-    <article class="article-first"><img src="./images/watch.png"> <div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> <div class="more"></div><div class="more2"><span class="btnMore unselectable">View more</span></div></article>
-    <article class="article2"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article3"><img src="./images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <div class="article article-first"><img src="./images/watch.png" alt="watch"> <div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> <div class="more"></div><div class="more2"><span class="btnMore unselectable">View more</span></div></div>
+    <div class="article article2"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </div>
+    <div class="article article3"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </div>
     </div>
     <div class="line2">
-    <article class="article4"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article5"><img src="./images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article6"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <div class="article article4"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </div>
+    <div class="article article5"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </div>
+    <div class="article article6"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </div>
     </div>
-</section>
+</div>
 
-<section class="new gridLine">
+<div class="new gridLine">
     <div class="line1">
-    <article class="article-first articleDouble"><div class="idk"><h2 class="idkText">BEST PRICE IN THIS MONTH</h2><span class="btn unselectable">VIEW ALL</span></div><img src="./images/sportsBag.png"></article>
+    <div class="article article-first articleDouble"><div class="idk"><h2 class="idkText">BEST PRICE IN THIS MONTH</h2><span class="btn unselectable">VIEW ALL</span></div><img src="./images/sportsBag.png" alt="sportsbag"></div>
     </div>
     <div class="line2">
-    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
-    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <div class="article articleB"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
+    <div class="article articleB"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
     </div>
-</section>
+</div>
 
-<div class="justFlex"><span class="vertical-left"><nav class="nav2"><div class="menu-item2 unselectable"><a href="#">NEW&nbsp;ARRIVALS</a></div><div class="menu-item2 unselectable"><a href="#">FEATURED</a></div><div class="menu-item2 unselectable"><a href="#">BET&nbsp;SELLING</a></div><div class="menu-item2 unselectable"><a href="#">ON&nbsp;SALES</a></div></nav></span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+<div class="justFlex"><div class="vertical-left"><nav class="nav2"><div class="menu-item2 unselectable"><a href="#">NEW&nbsp;ARRIVALS</a></div><div class="menu-item2 unselectable"><a href="#">FEATURED</a></div><div class="menu-item2 unselectable"><a href="#">BET&nbsp;SELLING</a></div><div class="menu-item2 unselectable"><a href="#">ON&nbsp;SALES</a></div></nav></div><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
 
-<section class="other gridLine">
+<div class="other gridLine">
     <div class="line1">
-        <article class="articleB articleBuy"><div id="imgDiv"><img src="./images/watch.png"> <div class="more"></div> <div class="more2"><div id="shopBtns"><img src="./images/icons/cart2.png"><span class="divide"></span><img src="./images/icons/heart2.png"><span class="divide"></span><img src="./images/icons/search2.png"></div></div>  </div><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div> </article>
-    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+        <div class="article articleB articleBuy"><div id="imgDiv"><img src="./images/watch.png" alt="watch"> <div class="more"></div> <div class="more2"><div id="shopBtns"><img src="./images/icons/cart2.png" alt="cart"><span class="divide"></span><img src="./images/icons/heart2.png" alt="heart"><span class="divide"></span><img src="./images/icons/search2.png" alt="search"></div></div>  </div><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div> </div>
+    <div class="article articleB"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
     </div>
     <div class="line2">
-    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
-    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <div class="article articleB"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
+    <div class="article articleB"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
     </div>
-</section>
+</div>
 
-<section class="other gridLine">
+<div class="other gridLine">
     <div class="line1">
-        <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
-    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+        <div class="article articleB"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
+    <div class="article articleB"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
     </div>
     <div class="line2">
-    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
-    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <div class="article articleB"><img src="./images/watch.png" alt="watch"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
+    <div class="article articleB"><img src="./images/bag.png" alt="bag"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></div>
     </div>
-</section>
+</div>
 
-<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
 
-<section class="blog gridLine">
+<div class="blog gridLine">
     <div class="line3">
-        <img src="./images/icons/left-arrow.png" class="arrows-article">
-        <article class="articleB article-hide"><img src="./images/watch.png"></article>
-        <article class="articleB"><img src="./images/bag.png"></article>
-        <article class="articleB article-hide"><img src="./images/watch.png"></article>
-        <img src="./images/icons/right-arrow.png" class="arrows-article">
+        <img src="./images/icons/left-arrow.png" class="arrows-article" alt="go back">
+        <div class="article articleB article-hide"><img src="./images/watch.png" alt="watch"></div>
+        <div class="article articleB"><img src="./images/bag.png" alt="bag"></div>
+        <div class="article articleB article-hide"><img src="./images/watch.png" alt="watch"></div>
+        <img src="./images/icons/right-arrow.png" class="arrows-article" alt="go forward">
     </div>
-</section>
+</div>
 
-<section class="blogText gridLine">
+<div class="blogText gridLine">
     <div class="line3">
-        <article class="articleB article-hide">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
-        <article class="articleB">ghaegerg r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
-        <article class="articleB article-hide">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+        <div class="article articleB article-hide">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
+        <div class="article articleB">ghaegerg r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
+        <div class="article articleB article-hide">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
     </div>
-</section>
+</div>
 
 
-<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
-<section class="brands gridLine">
+<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
+<div class="brands gridLine">
     <div class="line3">
-        <article class="articleC"><img src="./images/watch.png"></article>
-        <article class="articleC"><img src="./images/watch.png" ></article>
-        <article class="articleC"><img src="./images/watch.png"></article>
-        <article class="articleC"><img src="./images/watch.png"></article>
-        <article class="articleC"><img src="./images/watch.png" ></article>
-        <article class="articleC"><img src="./images/watch.png" ></article>
+        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/watch.png"  alt="watch"></div>
+        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/watch.png" alt="watch" ></div>
+        <div class="article articleC"><img src="./images/watch.png"  alt="watch"></div>
     </div>
-</section>
+</div>
 
 </main>
 
 
-    <section id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">SUBSCRIBE</button></section>
+    <div id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">SUBSCRIBE</button></div>
 
-<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> <span class="underFooter"><span>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</span> <span><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="./images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="./images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="./images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="./images/icons/american-express.png"></div></span> <span><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="./images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="./images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="./images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></span></span></footer>
+<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> <div class="underFooter"><div>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</div> <div><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="./images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="./images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="./images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="./images/icons/american-express.png"></div></div> <div><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="./images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="./images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="./images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div></footer>
 
 </body>
 </html>
