--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ecommerce</title>
+    <link rel="stylesheet" type="text/css" href="../style/index.css">
+    <link rel="stylesheet" type="text/css" href="../style/contactUs.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="vertical-center"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="../images/icons/clock.png"></header><nav class="nav"><div class="menu-item unselectable"><a href="#">HOME</a></div><div class="menu-item unselectable"><a href="#">SHOP</a></div><div class="menu-item unselectable"><a href="#">PRODUCTS</a></div><div class="menu-item unselectable"><a href="#">BLOG</a></div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="../images/icons/search.png"><img alt="user icon" class="menu-icon" src="../images/icons/user.png"><img alt="cart icon" class="menu-icon" src="../images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="../images/icons/heart.png"></div></div></div>
+
+
+<div class="thumbnail-holder">
+    <div class="arrows"><img alt="go back arrow" class="unselectable arrow leftarrow" src="../images/icons/back.png"><img alt="go back arrow" class="unselectable arrow rightarrow" src="../images/icons/next.png"></div>
+    <div class="thumbnail" id="thumbnail1"><div class="info"><div><p class="noMargin">TOP SELL THIS MONTH</p><h1>Watch collection</h1><div class="shopNow unselectable">SHOP&nbsp;NOW</div></div></div><div class="img-div"><img alt="thumbnail-img" src="../images/watch.png" class="thumbnail-img unselectable"></div></div>
+    <div class="thumbnail" id="thumbnail2"></div>
+    <div class="thumbnail" id="thumbnail3"></div>
+    <div class="vertical-center thumbnail-btns"><div class="thumbnail-button clicked"></div> <div class="thumbnail-button"></div> <div class="thumbnail-button"></div></div>
+</div>
+
+<main id="content">
+   <form>
+       <input type="text" placeholder="First Name"/>
+       <input type="text" placeholder="Last Name"/>
+       <input type="email" placeholder="Email"/>
+       <textarea placeholder="Your message"></textarea>
+       <span>
+       <span><label for="rad1">Male</label><input type="radio" name="rad" id="rad1" checked></span>
+    <span><label for="rad2">Female</label><input type="radio" name="rad" id="rad2"></span>
+<span><label for="rad3">Other</label><input type="radio" name="rad" id="rad3"></span>
+</span>
+<label>Birthday: </label>
+       <span>
+           <label for="y">Y: </label><select id="y"><option>2001</option><option>2000</option><option>1999</option></select>
+           <label for="m">M: </label><select id="m"><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option><option>11</option><option>12</option></select>
+           <label for="d">D: </label><select id="d"><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option><option>11</option><option>12</option></select>
+    </span>
+       <button type="submit">Submit!</button>
+   </form>
+</main>
+
+<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> <div class="underFooter"><div>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</div> <div><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="../images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="../images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="../images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="../images/icons/american-express.png"></div></div> <div><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="../images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="../images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="../images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="../images/icons/heart.png"></div></div></div></footer>
+
 </body>
 </html>
