footer, sections, fixed menu

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ecommerce</title>
+    <title>ecommerce - home</title>
     <link rel="stylesheet" type="text/css" href="./style/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./images/icons/clock.png">
 </head>
 <body>
 
-<div class="vertical-center"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn" id="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav id="nav" class="nav"><img id="navBtn" alt="go back" src="./images/icons/left-arrow.png"><div class="menu-item unselectable menu-item-selected"><a href="#">HOME</a></div><div class="menu-item unselectable"><a href="#">SHOP</a></div><div class="menu-item unselectable"><a href="./pages/aboutUs.html">ABOUT&nbsp;US</a></div><div class="menu-item unselectable"><a href="./pages/contactUs.html">CONTACT&nbsp;US</a></div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
+<div class="vertical-center fix"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn" id="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav id="nav" class="nav"><img id="navBtn" alt="go back" src="./images/icons/left-arrow.png"><div class="menu-item unselectable menu-item-selected"><a href="#">HOME</a></div><div class="menu-item unselectable"><a href="#">SHOP</a></div><div class="menu-item unselectable"><a href="./pages/aboutUs.html">ABOUT&nbsp;US</a></div><div class="menu-item unselectable"><a href="./pages/contactUs.html">CONTACT&nbsp;US</a></div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
 
 
 <div class="thumbnail-holder">
@@ -72,7 +72,7 @@
     </div>
 </div>
 
-<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
+<div class="justFlex"><h2 class="vertical-left">LATEST BLOG POST</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
 
 <div class="blog gridLine">
     <div class="line3">
@@ -86,22 +86,22 @@
 
 <div class="blogText gridLine">
     <div class="line3">
-        <div class="article articleB article-hide">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
-        <div class="article articleB">ghaegerg r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
-        <div class="article articleB article-hide">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</div>
+        <div class="article articleB article-hide"> <h3>Lorem ipsum dolor sit amet</h3> <span class="grayText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nisl massa, sit amet sodales lorem efficitur at. Cras at mauris accumsan, fringilla diam ut, varius massa. Donec non facilisis ligula. Donec hendrerit, elit at semper aliquam, eros magna vestibulum nulla, ut vulputate lorem massa lobortis mauris. Integer id scelerisque turpis, eu tempor turpis.</span> </div>
+        <div class="article articleB"> <h3>Etiam elementum condimentum</h3> <span class="grayText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nisl massa, sit amet sodales lorem efficitur at. Cras at mauris accumsan, fringilla diam ut, varius massa. Donec non facilisis ligula. Donec hendrerit, elit at semper aliquam, eros magna vestibulum nulla, ut vulputate lorem massa lobortis mauris. Integer id scelerisque turpis, eu tempor turpis.</span> </div>
+        <div class="article articleB article-hide"> <h3>Pellentesque erat lorem</h3> <span class="grayText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nisl massa, sit amet sodales lorem efficitur at. Cras at mauris accumsan, fringilla diam ut, varius massa. Donec non facilisis ligula. Donec hendrerit, elit at semper aliquam, eros magna vestibulum nulla, ut vulputate lorem massa lobortis mauris. Integer id scelerisque turpis, eu tempor turpis.</span> </div>
     </div>
 </div>
 
 
-<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
+<div class="justFlex"><h2 class="vertical-left">SHOP BY BRANDS</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png" alt="go back"><img src="./images/icons/right-arrow.png" alt="go forward"></span></div>
 <div class="brands gridLine">
     <div class="line3">
-        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
-        <div class="article articleC"><img src="./images/watch.png"  alt="watch"></div>
-        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
-        <div class="article articleC"><img src="./images/watch.png" alt="watch"></div>
-        <div class="article articleC"><img src="./images/watch.png" alt="watch" ></div>
-        <div class="article articleC"><img src="./images/watch.png"  alt="watch"></div>
+        <div class="article articleC"><img src="./images/logos/brand1.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/logos/brand2.png"  alt="watch"></div>
+        <div class="article articleC"><img src="./images/logos/brand3.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/logos/brand4.png" alt="watch"></div>
+        <div class="article articleC"><img src="./images/logos/brand5.png" alt="watch" ></div>
+        <div class="article articleC"><img src="./images/logos/brand6.png"  alt="watch"></div>
     </div>
 </div>
 
@@ -110,7 +110,7 @@
 
     <div id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">SUBSCRIBE</button></div>
 
-<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> <div class="underFooter"><div>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</div> <div><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="./images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="./images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="./images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="./images/icons/american-express.png"></div></div> <div><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="./images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="./images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="./images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div></footer>
+<footer><div><div class="third"><h2>Bazar</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Pellentesque lobortis nisl massa, sit amet sodales lorem efficitur at <br><br><p><img src="./images/icons/pin.png"/> 184 Main Rd street salawah</p><p><img src="./images/icons/email.png"/> contactbazar@demo.com</p><p><img src="./images/icons/phone.png"/> (011) 222 666 432</p></div> <div class="links"><h2>Information</h2><nav><a href="#">condimentum</a><a href="#">Nulla vestibulum</a><a href="#">imperdiet</a><a href="#">habitasse platea</a><a href="#">Donec</a><a href="#">imperdiet</a></nav></div> <div><h2>Useful Link</h2><nav><a href="#">condimentum</a><a href="#">Nulla vestibulum</a><a href="#">imperdiet</a><a href="#">habitasse platea</a><a href="#">Donec</a><a href="#">imperdiet</a></nav></div> </div> <div class="underFooter"><div>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</div> <div><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="./images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="./images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="./images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="./images/icons/american-express.png"></div></div> <div><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="./images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="./images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="./images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div></footer>
 
 <script src="./script/index.js"></script>
 
